<resources>
    <string name="app_name">Shell</string>
    <string name="wait_dialog_title">正在请求，请稍候…</string>
    <string name="know">知道了</string>

    <!-- net error -->
    <string name="error_please_check_network">请检查网络。</string>
    <string name="error_timeout">请求超时，网络不好或者服务器不稳定。</string>
    <string name="error_not_found_server">未发现指定服务器，清切换网络后重试。</string>
    <string name="error_url_error">URL错误。</string>
    <string name="error_not_found_cache">没有找到缓存.</string>
    <string name="error_unknow">未知错误。</string>
    <string name="error_response_code">服务器响应码%1$d</string>
    <string name="text_pwd">密码</string>
    <string name="btn_toregister">没有账号?马上注册</string>

    <string name="login_top_text">登录</string>


    <!-- 新页面的操作流程 -->
    <string name="register_hint_email">邮箱</string>
    <string name="register_hintcode">邮箱验证码</string>
    <string name="re_getcode">获取验证码</string>
    <string name="re_pwd">密码</string>
    <string name="re_invitedcode">邀请码(非必须)</string>
    <string name="re_register">注册</string>
    <string name="re_tologin">已有账号，直接登陆</string>
    <string name="log_cancle">取消</string>
    <string name="log_login">登录</string>
    <string name="log_noaccount">没有账号？马上注册</string>
    <string name="log_forgetpwd">忘记密码</string>
    <string name="forget_title">忘记密码</string>
    <string name="for_emailcode">邮箱验证码</string>
    <string name="for_getcode">获取验证码</string>
    <string name="for_newpwd">新密码</string>
    <string name="for_agianpwd">重新输入新密码</string>
    <string name="for_setpwd">重置密码</string>
    <string name="index_kc">矿池</string>
    <string name="index_jd">接单</string>
    <string name="index_qb">钱包</string>
    <string name="index_wd">我的</string>
    <string name="home_all_suanli">全网算力(UG)</string>
    <string name="home_mycreide">我的信用</string>
    <string name="home_mysuanli">我的算力</string>
    <string name="home_all_jl">矿池总奖励(USDT)</string>
    <string name="home_title1">里程碑</string>
    <string name="or_pagetitle">抢单</string>
    <string name="or_allorder">全网订单</string>
    <string name="or_allshuju">全网数据</string>
    <string name="or_allliushui">全网流水</string>
    <string name="or_today_order">今日订单</string>
    <string name="or_today_liushui">今日流水</string>
    <string name="or_mainwork">主网工作</string>
    <string name="or_online">在线节点</string>
    <string name="or_account">账户</string>
    <string name="or_edu">额度：</string>
    <string name="or_shouyi">收益：</string>
    <string name="or_begin">开始接单</string>
    <string name="or_endorder">停止接单</string>
    <string name="or_unfinishorder">待完成订单</string>
    <string name="or_all">全部</string>
    <string name="or_orderNumber">订单编号</string>
    <string name="or_ordetail">订单详情</string>
    <string name="or_ortype">订单类型</string>
    <string name="or_orjine">订单金额</string>
    <string name="or_zhuandizhi">转出地址</string>
    <string name="ben_huobi">本位货币</string>
    <string name="or_huilv">当前汇率</string>
    <string name="or_zsje">折算金额</string>
    <string name="or_fwjl">服务奖励</string>
    <string name="or_out">转出</string>
    <string name="or_popnew">您有新的订单</string>
    <string name="rmb_name">钱包</string>
    <string name="rmb_hasamount">持有数量</string>
    <string name="rmb_djcount">冻结数量</string>
    <string name="rmb_canuse">可用数量</string>
    <string name="rmb_qingsuan">清算</string>
    <string name="rmb_tibi">提币</string>
    <string name="rmb_cz">充值</string>
    <string name="or_zhiya">质押</string>
    <string name="rmb_sl">数量</string>
    <string name="rmb_lx">类型</string>
    <string name="rmb_zt">状态</string>
    <string name="rmb_time">时间</string>
    <string name="tibi_jiaoyi">交易密码</string>
    <string name="tb_againpwd">请输入交易密码</string>
    <string name="tb_cancle">取消</string>
    <string name="tb_ok">确定</string>
    <string name="tb_address">提币地址</string>
    <string name="tb_hint_address">输入或长按粘贴地址</string>
    <string name="tb_sl">提币数量</string>
    <string name="tb_tihintsl">请输入提币数量</string>
    <string name="tb_kgmoney">矿工费</string>
    <string name="tb_reget">实际到账</string>
    <string name="tibi_notice">单笔提币最少100 USDT，最多10000 USDT</string>
    <string name="tb_btnpost">申请提现</string>
    <string name="cz_saoma">扫码获取充值地址</string>
    <string name="cz_copyaddress">复制地址</string>
    <string name="my_letter">站内信</string>
    <string name="my_set">设置</string>
    <string name="my_head">头像</string>
    <string name="my_nick">昵称</string>
    <string name="my_email">邮箱</string>
    <string name="my_input_nick">请输入昵称</string>
    <string name="wd_camera">拍照</string>
    <string name="wd_photo">从手机相册选择</string>
    <string name="my_jiedian">邀请节点</string>
    <string name="my_huilv">全球汇率</string>
    <string name="my_lgpwd">登录密码</string>
    <string name="my_jypwd">交易密码</string>
    <string name="my_language">世界语言</string>
    <string name="my_version">主网系统</string>
    <string name="my_about">TRITON LAB</string>
    <string name="my_logout">退出</string>
    <string name="my_myfriend">我的好友</string>
    <string name="mf_first">国际贸易区块清算系统招募全球经纪人</string>
    <string name="mf_second">玩法多样 轻松赚钱</string>
    <string name="mf_third">颠覆传统 轻松赚钱</string>
    <string name="mf_fourth">Shell,轻松赚取交易佣金</string>
    <string name="mf_five">注册时请填写邀请码：</string>
    <string name="mf_six">长按识别二维码：</string>
    <string name="mf_invcode">邀请码：AEFGGG</string>
    <string name="mf_savephoto">保存为图片</string>
    <string name="mf_copycode">复制邀请链接</string>
    <string name="mf_creiscore">信用分</string>
    <string name="mf_myf">好友</string>
    <string name="mf_suanli">算力(UG)</string>
    <string name="hv_hb">货币</string>
    <string name="hv_xh">现汇</string>
    <string name="hv_xj">现金</string>
    <string name="hv_bankin">银行买入</string>
    <string name="hv_bankout">银行卖出</string>
    <string name="language_auto">自动</string>
    <string name="language_tw">繁体中文</string>
    <string name="language_en">English</string>
    <string name="language_han">韩文</string>
    <string name="language_jap">日语</string>
    <string name="home_poprecount">注册用户:</string>
    <string name="home_ljoc">累计完成订单数:</string>
    <string name="home_ljje">累计完成订单金额:</string>
    <string name="home_sjjd">超级节点:</string>
    <string name="money_zhangdan">账单</string>
    <string name="money_myshouyi">我的收益</string>
    <string name="sy_allin">全网数据</string>
    <string name="sy_ordercount">订单数量</string>
    <string name="sy_orje">订单金额</string>
    <string name="sy_orsy">订单收益</string>
    <string name="sy_history">历史收益</string>
    <string name="jd_introduce">节点说明</string>
    <string name="jd_sl">算力：</string>
    <string name="jd_jdsl">节点算力</string>
    <string name="jd_djsm">等级说明</string>
    <string name="jd_dj">等级</string>
    <string name="jd_zs">直属节点</string>
    <string name="jd_allsuanli">所有节点算力</string>
    <string name="qs_xieyi">我已知晓以上清算条款，并继续清算</string>
    <string name="nick_finish">完成</string>
    <string name="pop_getorder">抢单</string>

    <!--王俊刚-->
    <string name="qw_suanlitu">全网算力图</string>
    <string name="qw_suanlitu_sm">全网算力说明</string>
    <string name="house">小时</string>
    <string name="prompt">提示</string>
    <string name="determine">确定</string>
    <string name="start_order">开始接单后，系统开始派发订单，如若您信用大于300分，订单将直接派送至您订单明细中，直接处理即可。如您的信用小于300分，则在订单大厅中进行抢单。
在您停止工作后，务必点击停止接单，派发的订单未处理将触发处罚机制。</string>
    <string name="choose_language">选择语言</string>
    <string name="complete">完成</string>
    <string name="credit_description">信用分说明</string>
    <string name="credit_description_contont">信用分三评判节点贡献的一个重要指标，也是奖励发放的重要维度，信用分可由完成订单/邀请新节点等方式获得。一下接上信用分的获取及消除的明细信息</string>
    <string name="order">订单</string>
    <string name="no_content">暂无内容</string>
    <string name="force_demonstrate">算力说明</string>
    <string name="version_title">提示</string>
    <string name="version_sure">确定</string>
    <string name="home_jl">矿池奖励</string>
    <string name="fr_tuijian">推荐码</string>
    <string name="libei">里程碑</string>
    <string name="sasuccess">保存成功</string>
    <string name="setlogin">修改登录密码</string>
    <string name="lg_yuanshi">原始密码</string>
    <string name="lg_new">新密码</string>
    <string name="lg_agian">重新输入新密码</string>
    <string name="tv_jy">修改交易密码</string>
    <string name="tv_post">提交</string>

    <string name="home_all_suanli_S">全网算力</string>
    <string name="Net_trade_volume">全网交易量</string>
    <string name="So_the_pledge">全网质押</string>

    <string name="untreated">待处理</string>
    <string name="Have_to_dealwith">已处理</string>

    <string name="The_pledge_rights">质押权益</string>


    <string name="Benefits_that">收益说明</string>

    <string name="To_pledge">可质押(USDT)</string>

    <string name="earnings">收益</string>
    <string name="wb_nodata">无记录</string>
    <string name="tv_hascopy">已复制</string>
    <string name="my_shouyi">我的收益</string>
    <string name="usdtchar">USDT充币</string>
    <string name="putword">请输入</string>
    <string name="zy_other">其他</string>

    <string name="your_friend">您的好友</string>
    <string name="invited_to_join">邀请您加入</string>
    <string name="country_f">选择国家</string>

    <string name="you_have_new_order">您有新的订单</string>

    <string name="the_standard_currency">本位币种</string>

    <string name="all_loaded">已经全部加载完毕</string>
    <string name="available">可用 </string>
    <string name="please_check_option">请勾选我已知晓选项</string>

    <string name="processed">待处理</string>
    <string name="processing">处理中</string>
    <string name="successful">成功</string>
    <string name="failure">失败</string>
    <string name="block_confirmation">区块确认中</string>

    <string name="address">地址</string>

    <string name="has_been_settled">已结算</string>
    <string name="has_been_cancelled">已取消</string>
    <string name="reward">奖励</string>
    <string name="please_set_transaction_password">请设置交易密码</string>
    <string name="Yesterday">昨天</string>
    <string name="just">刚刚</string>
    <string name="Minutes_ago">分钟前</string>
    <string name="Hours_before">小时前</string>
    <string name="Days_ago">天前</string>
    <string name="creatTime">订单时间</string>
    <string name="dealTime">交易时间</string>

    <string name="todayEarnings">今日收益</string>

    <string name="Receive">接收</string>

    <string name="into">转入</string>

    <string name="Ore_pool_income">矿池收益</string>

    <string name="Credit_score">当前信用分</string>

    <string name="Pledged">当前已质押</string>

    <string name="Remaining_pledged">剩余可质押</string>

    <string name="pledge_number">质押数量</string>

    <string name="details">详情</string>

    <!--在订单时间下面再加一个交易时间
繁：交易時間
英：Deal time
日：取引時間
韩：거래 시간
@debbie @吕 @王俊刚 -->
</resources>
