<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="#04172A">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

    <include
        layout="@layout/layout_top"/>


    <EditText
        android:id="@+id/et_account"
        android:layout_marginTop="49dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:hint="@string/register_hint_email"
        android:textColorHint="#678DA8"
        android:textColor="#678DA8"
        android:paddingLeft="17dp"
        android:textSize="14sp"
        android:background="@drawable/input_login"/>

        <RelativeLayout
            android:layout_marginTop="20dp"
            android:layout_width="match_parent"
            android:layout_height="50dp">

            <EditText
                android:id="@+id/et_code"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:hint="@string/for_emailcode"
                android:textColorHint="#678DA8"
                android:textColor="#678DA8"
                android:paddingLeft="17dp"
                android:textSize="14sp"
                android:background="@drawable/input_login"/>


            <TextView
                android:id="@+id/tv_Code"
                android:layout_width="130dp"
                android:layout_height="50dp"
                android:text="@string/for_getcode"
                android:gravity="center_vertical"
                android:textColor="#4AB2E7"
                android:layout_alignParentRight="true"/>

        </RelativeLayout>



    <EditText
        android:id="@+id/et_pwd"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:hint="@string/for_newpwd"
        android:textColorHint="#678DA8"
        android:textColor="#678DA8"
        android:paddingLeft="17dp"
        android:textSize="14sp"
        android:background="@drawable/input_login"/>

    <EditText
        android:id="@+id/et_agianpwd"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:hint="@string/for_agianpwd"
        android:textColorHint="#678DA8"
        android:textColor="#678DA8"
        android:paddingLeft="17dp"
        android:textSize="14sp"
        android:background="@drawable/input_login"/>

    <Button
        android:id="@+id/btn_change"
        android:layout_marginTop="26dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:text="@string/for_setpwd"
        android:textColor="#FFFFFF"
        android:background="@drawable/button"/>



    </LinearLayout>



</RelativeLayout>
