<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@drawable/card_bg"
    android:layout_marginLeft="34dp"
    android:layout_marginRight="34dp"
    android:orientation="vertical">


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tibi_jiaoyi"
        android:textSize="18sp"
        android:textColor="#FFFFFF"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="30dp"/>


    <TextView
        android:id="@+id/tv_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tb_againpwd"
        android:textColor="#FFFFFF"
        android:layout_marginTop="15dp"
        android:layout_gravity="center_horizontal"
        android:textSize="14sp"
        />

    <com.galenleo.widgets.CodeInputView
        android:id="@+id/editText"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="24dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        app:ciItemWidth="40dp"
        app:ciTextSize="20sp"
        app:ciTextColor="#FFFFFF"
        app:ciInputType="password"
        app:ciGapWidth="10dp"
        app:ciItemCount="6"
        android:layout_centerInParent="true"
        app:ciItemBackground="@drawable/border"/>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="20dp"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btn_canle"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:textColor="#8D99B2"
            android:layout_height="wrap_content"
            android:background="@drawable/cancle_background"
            android:layout_marginLeft="44dp"
            android:text="@string/tb_cancle"/>

        <Button
            android:id="@+id/btn_ok"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:textColor="#fff"
            android:layout_height="wrap_content"
            android:background="@mipmap/sure_background"
            android:layout_marginRight="44dp"
            android:layout_marginLeft="7dp"
            android:text="@string/tb_ok"/>

    </LinearLayout>






</LinearLayout>
