<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#04172A"
    android:orientation="vertical">

    <include layout="@layout/layout_top" />


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:id="@+id/llRootView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="50dp"
                android:layout_marginRight="50dp"
                android:background="#210145"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:text="@string/mf_first"
                    android:textColor="#FFFFFF"
                    android:textSize="32sp" />


                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:text="@string/mf_second"
                    android:textColor="#FFFFFF"
                    android:textSize="28sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="@dimen/dp_10"
                    android:text="@string/mf_third"
                    android:textColor="#FFFFFF"
                    android:textSize="18sp" />


                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="20dp"
                    android:src="@mipmap/ta" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="120dp"
                    android:background="#FFFFFF"
                    android:orientation="horizontal">

                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="3"
                        android:orientation="vertical">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="19dp"
                            android:text="@string/mf_fourth"
                            android:textColor="#04172A"
                            android:textSize="16sp" />


                        <RelativeLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="8dp">

                            <TextView
                                android:id="@+id/tv_jinE"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_centerVertical="true"
                                android:layout_marginLeft="19dp"
                                android:text="@string/mf_five"
                                android:textColor="#8D99B2"
                                android:textSize="12sp" />

                            <TextView
                                android:id="@+id/tv_www"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_centerVertical="true"
                                android:layout_marginLeft="6dp"
                                android:layout_toRightOf="@id/tv_jinE"
                                android:text=""
                                android:textSize="14sp"
                                android:textColor="#000000"/>
                        </RelativeLayout>

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_centerVertical="true"
                            android:layout_marginLeft="19dp"
                            android:layout_marginTop="4dp"
                            android:text="@string/mf_six"
                            android:textColor="#8D99B2"
                            android:textSize="12sp" />

                    </LinearLayout>


                    <RelativeLayout
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1">

                        <ImageView
                            android:id="@+id/iv_qrCode"
                            android:layout_width="86dp"
                            android:layout_height="86dp"
                            android:layout_centerInParent="true"
                            android:layout_marginTop="65dp" />

                    </RelativeLayout>

                </LinearLayout>
            </LinearLayout>


            <TextView
                android:id="@+id/tv_helpCode"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="20dp"
                android:text="@string/mf_invcode"
                android:textColor="#ffffff"
                android:textSize="17sp" />


            <Button
                android:id="@+id/btn_save"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginLeft="36dp"
                android:layout_marginRight="36dp"
                android:layout_marginTop="33dp"
                android:background="@drawable/helpfriend"
                android:text="@string/mf_savephoto"
                android:textSize="16sp" />


            <TextView
                android:id="@+id/tv_copy"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="21dp"
                android:text="@string/mf_copycode"
                android:textColor="#ffffff"
                android:textSize="17sp" />

            <TextView
                android:id="@+id/tv_1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="28dp"
                android:layout_marginTop="21dp"
                android:text="1. 邀请新好友参与Shell生态即可获得2信用分"
                android:textColor="#8D99B2"
                android:textSize="14sp" />

        </LinearLayout>
    </ScrollView>


</LinearLayout>
