<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#061D34"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_360"
        android:layout_marginLeft="@dimen/dp_28"
        android:layout_marginTop="@dimen/dp_20"
        android:layout_marginRight="@dimen/dp_28"
        android:background="@mipmap/chongzhi_erweima_bg"
        android:orientation="vertical">



        <com.makeramen.roundedimageview.RoundedImageView
            app:riv_corner_radius="@dimen/dp_5"
            app:riv_border_color="@color/white"
            app:riv_border_width="@dimen/dp_8"
            android:scaleType="fitXY"
            android:id="@+id/iv_qrCode"
            android:layout_width="160dp"
            android:layout_height="160dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="@dimen/dp_50"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="@dimen/dp_10"
            android:text="@string/cz_saoma"
            android:textColor="#FFFFFF"
            android:textSize="12sp" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_50"
            android:layout_marginLeft="@dimen/dp_20"
            android:layout_marginTop="@dimen/dp_19"
            android:layout_marginRight="@dimen/dp_20"
            android:background="@drawable/card_qrcode"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tv_qrContent"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginLeft="14dp"
                android:gravity="center"
                android:text=""
                android:textSize="12sp" />

        </RelativeLayout>

        <TextView
            android:id="@+id/rl_copy"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="@dimen/dp_12"
            android:text="@string/cz_copyaddress"
            android:textColor="#ffffff"
            android:textSize="14sp" />

    </LinearLayout>


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="22dp">

        <TextView
            android:id="@+id/tv_one"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="22dp"
            android:text="@string/rmb_sl"
            android:textColor="#678DA8"
            android:textSize="14sp" />


        <TextView
            android:id="@+id/tv_two"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="72dp"
            android:layout_marginTop="22dp"
            android:layout_toRightOf="@id/tv_one"
            android:text="@string/rmb_lx"
            android:textColor="#678DA8"
            android:textSize="14sp" />


        <TextView
            android:id="@+id/tv_four"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginTop="22dp"
            android:layout_marginRight="72dp"
            android:text="@string/rmb_time"
            android:textColor="#678DA8"
            android:textSize="14sp" />
    </RelativeLayout>


    <com.scwang.smartrefresh.layout.SmartRefreshLayout
        android:id="@+id/smartRefreshLayout"
        android:layout_width="match_parent"
        android:layout_height="120dp">

        <com.scwang.smartrefresh.layout.header.ClassicsHeader
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">


            <ListView
                android:id="@+id/listView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/tv_more"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/listView"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="@dimen/dp_10"
                android:gravity="center"
                android:text="@string/all_loaded"
                android:textColor="#156097" />
        </RelativeLayout>

        <com.scwang.smartrefresh.layout.footer.ClassicsFooter
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

    </com.scwang.smartrefresh.layout.SmartRefreshLayout>


</LinearLayout>
